# fundable-api-example

./: .env.example  .gitignore  API_CHANGELOG.md  CLAUDE.md  README.md  apiTest.py  fundableClient.py  pyproject.toml  quickstart.ipynb  requirements.txt
examples/: analyze_top_investors.py  simple_example.py  visualize_investors.py
examples/alerts/: get_alerts.py
examples/company_viz/: README.md  agent_analysis.py
examples/data/: San_Francisco_2026-03-05.csv  investors_export.csv
examples/find_angel_investors/: find_angel_investors.py
examples/get_alerts/: get_alerts.py
examples/get_companies/: get_companies.py  get_company_deals.py  get_recent_raises.py
examples/get_investors/: get_investor_deals.py  get_investors.py
examples/get_recent_deals/: README.md  get_recent_deals.py
examples/search/: search_examples.py
examples/top_investors/: README.md  investor_analyzer.py  (+2 more)
openapi/: industries.md  industry-api-docs-business-tech.md  industry-api-docs-commerce-consumer.md  industry-api-docs-media-content.md  industry-api-docs-science-industry.md  industry-super-categories.md  openapi-alerts.yaml  openapi-companies.yaml  openapi-deals.yaml  openapi-investors.yaml  openapi-other.yaml  openapi-people.yaml  openapi.yaml
openapi_v2/: openapi-alerts.yaml  openapi-companies.yaml  openapi-deals.yaml  openapi-investors.yaml  openapi-other.yaml  openapi-people.yaml
openapi_v3/: openapi-alerts.yaml  openapi-people.yaml
output/: sample_deals.json
sample_output/: frame_company.json  frame_deals.json  shasta_deals.json  shasta_investors.json
tests/: __init__.py
(+21 files in other folders)
