[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundable-client"
version = "0.1.0"
description = "Python client for Fundable API with investor analysis and visualization tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Fundable Team", email = "support@tryfundable.ai"}
]
license = {text = "MIT"}
keywords = ["fundable", "api", "investment", "venture capital", "analysis", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://www.tryfundable.ai"
Documentation = "https://www.tryfundable.ai/docs"
Repository = "https://github.com/fundable/fundable_api_example_repo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fundable = ["py.typed"]
